Navigation between page corrections
- psk-link replaced with webc-link
- tags fixing

--- a/pages/cardinal/components/psk-app-root.html
+++ b/pages/cardinal/components/psk-app-root.html
@@ -148,7 +148,7 @@
                     </psk-code>
                 </psk-chapter>
                 <psk-description>
-                    More details on how to style the slotted components or elements is described in <psk-link tag="themes">Themes</psk-link>.
+                    More details on how to style the slotted components or elements is described in <webc-link tag="cardinal-themes">Themes</webc-link>.
                     <psk-img src="/assets/images/newlook/CustomLayout.png" title="Custom web layout"></psk-img>
                 </psk-description>
             </psk-chapter>
