--- a/pages/cardinal/components/psk-breadcrumb-navigator.html
+++ b/pages/cardinal/components/psk-breadcrumb-navigator.html
@@ -24,7 +24,7 @@
         <psk-code language="JavaScript">
             {
                 label: string // The label to be displayed
-                path: string // The path for navigation. Ths attribute is sent as event-data with <psk-link page="cardinal/web-components/psk-button">psk-button</psk-link> component.
+                path: string // The path for navigation. Ths attribute is sent as event-data with <webc-link tag="psk-button">psk-button</webc-link> component.
             }
         </psk-code>
         <p>The component accepts a special attribute, <code>mode</code>, which allows the user to choose between three default styles of breadcrumb:</p>
