--- a/pages/cardinal/components/psk-chapter.html
+++ b/pages/cardinal/components/psk-chapter.html
@@ -21,9 +21,9 @@
             format) that will pe passed along.</p>
         <p>Every time a chapter is created the event is triggered and an children components
             hierarchy is created (or updated if it was already created).</p>
-        <span>All info sent by the <code> sendChapter</code> event will be passed to the <psk-link
-                tag="psk-page">psk-page</psk-link> and collected by the <psk-link tag="psk-toc">
-                psk-toc</psk-link> so it can be displayed to the user.</span>
+        <span>All info sent by the <code> sendChapter</code> event will be passed to the <webc-link
+                tag="psk-page">psk-page</webc-link> and collected by the <webc-link tag="psk-toc">
+                psk-toc</webc-link> so it can be displayed to the user.</span>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
