--- a/pages/cardinal/components/psk-condition.html
+++ b/pages/cardinal/components/psk-condition.html
@@ -175,7 +175,7 @@
         <p>A model expression can also return a <code>Promise</code>, when that happens, <code>psk-condition</code> will wait for the Promise to be resolved and based on its value it will decide if the children nodes will be rendered or not.</p>
 
         <psk-highlight>
-            <p>As seen in the previous code samples, the <code>psk-condition</code> needs to be placed inside a controller aware component in order to have access to the model so it can evaluate either a property or a predefined expression. Click <a href="/?Cardinal/models&chapter=expressions">here</a> to learn more about model expressions. Regardless of the type of condition used, the attribute value must start with the <code>@</code> character, as explained in the <psk-link tag="Models">Cardinal Model</psk-link> chapter.</p>
+            <p>As seen in the previous code samples, the <code>psk-condition</code> needs to be placed inside a controller aware component in order to have access to the model so it can evaluate either a property or a predefined expression. Click <a href="/?Cardinal/models&chapter=expressions">here</a> to learn more about model expressions. Regardless of the type of condition used, the attribute value must start with the <code>@</code> character, as explained in the <webc-link tag="Models">Cardinal Model</webc-link> chapter.</p>
         </psk-highlight>
     </psk-chapter>
 
