--- a/pages/cardinal/components/psk-container.html
+++ b/pages/cardinal/components/psk-container.html
@@ -28,7 +28,7 @@
         </p>
         <p>Inside a <code>psk-container</code> component any other <code>psk</code> components can be used,even the psk-container itself.</p>
         <p>In case there is an already created component , and the user wants to provide the HTML context to the container, we implemented a feature that will begin the searching of a controller script from there: <code>parentHost</code>.</p>
-        <p>It also uses <psk-link tag="psk-page-loader">psk-page-loader</psk-link> only if the <code> htmlFilePath</code> property is provided.</p>
+        <p>It also uses <webc-link tag="psk-page-loader">psk-page-loader</webc-link> only if the <code> htmlFilePath</code> property is provided.</p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
