--- a/pages/cardinal/components/psk-description.html
+++ b/pages/cardinal/components/psk-description.html
@@ -17,9 +17,9 @@
     <psk-toc title="Table of contents"></psk-toc>
 
     <psk-description title="Summary">
-        <span>This component creates a <psk-link tag="psk-chapter">psk-chapter</psk-link> using the title property.</span>
+        <span>This component creates a <webc-link tag="psk-chapter">psk-chapter</webc-link> using the title property.</span>
         <p>It's role is to create a good looking description for the documentation.</p>
-        <span>If the title property is not given than the component will create a <psk-link tag="psk-card">psk-card</psk-link> instead of a <code>psk-chapter</code></span>.
+        <span>If the title property is not given than the component will create a <webc-link tag="psk-card">psk-card</webc-link> instead of a <code>psk-chapter</code></span>.
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
