--- a/pages/cardinal/components/psk-details.html
+++ b/pages/cardinal/components/psk-details.html
@@ -25,7 +25,7 @@
     </psk-property-descriptor>
 
     <psk-chapter title="HTML Children">
-        <p>Any tag specified inside the component automatically reaches the hidden area of the <psk-link tag="psk-details">psk-details</psk-link>.</p>
+        <p>Any tag specified inside the component automatically reaches the hidden area of the <webc-link tag="psk-details">psk-details</webc-link>.</p>
         <p>The content will be visible as soon as the user interacts with the title or the arrow of the component.</p>
 
     </psk-chapter>
