--- a/pages/cardinal/components/psk-echo.html
+++ b/pages/cardinal/components/psk-echo.html
@@ -19,9 +19,9 @@
     <psk-description title="Summary">
         <p>This is one of the simplest components of CardinalJS. Its role is to render values ​​that have been dynamically set in the page controller.</p>
         <p>
-            The <psk-link tag="psk-echo">psk-echo</psk-link> component must be used in close connection with the <psk-link tag="psk-container">psk-container</psk-link>.
+            The <webc-link tag="psk-echo">psk-echo</webc-link> component must be used in close connection with the <webc-link tag="psk-container">psk-container</webc-link>.
             <br>
-            To use this component at full capacity, read also about <psk-link tag="psk-for-each">psk-for-each</psk-link>.
+            To use this component at full capacity, read also about <webc-link tag="psk-for-each">psk-for-each</webc-link>.
         </p>
         <p>In order to generate content in a simple form, without inputs you can use this component.</p>
     </psk-description>
