--- a/pages/cardinal/components/psk-example.html
+++ b/pages/cardinal/components/psk-example.html
@@ -18,7 +18,7 @@
 
     <psk-description title="Summary">
         <p>It's role is in rendering an example to the User Interface so the explanations are made easier.</p>
-        <p>It's best used with <psk-link tag="psk-code">psk-code</psk-link> for rendering a code example.</p>
+        <p>It's best used with <webc-link tag="psk-code">psk-code</webc-link> for rendering a code example.</p>
         <p>For the Visual Example we recommend using the <code>class="app-example"</code>, we created in order to give the user a better experience.</p>
     </psk-description>
 
