--- a/pages/cardinal/components/psk-for-each.html
+++ b/pages/cardinal/components/psk-for-each.html
@@ -123,7 +123,7 @@
             </psk-example>
         </psk-chapter>
         <p>A very good example of using this component can be found here:
-            <psk-link tag="using-forms">Using forms</psk-link>.
+            <webc-link tag="cardinal-forms">Using forms</webc-link>.
         </p>
 
         <p> In case the model is empty <code>psk-for-each</code> will render the slot="no-data" child element.</p>
