--- a/pages/cardinal/components/psk-form-row.html
+++ b/pages/cardinal/components/psk-form-row.html
@@ -102,7 +102,7 @@
                 </psk-form>
             </psk-code>
             <p>A complete live example can be found at:
-                <psk-link tag="using-forms">Using forms</psk-link> page.</p>
+                <webc-link tag="cardinal-forms">Using forms</webc-link> page.</p>
         </psk-example>
     </psk-chapter>
 
