--- a/pages/cardinal/components/psk-form.html
+++ b/pages/cardinal/components/psk-form.html
@@ -17,10 +17,10 @@
     <psk-toc title="Table of contents"></psk-toc>
 
     <psk-description title="Summary">
-        <p>Psk-form component is similar with <psk-link tag="psk-container">psk-container</psk-link>, in the way that both components have support for <b>controller</b> declaration.</p>
+        <p>Psk-form component is similar with <webc-link tag="psk-container">psk-container</webc-link>, in the way that both components have support for <b>controller</b> declaration.</p>
         <p>The purpose of this component is to create easy forms that have attached to them controllers that can handle the submission of the form.</p>
         <p>Controller declaration is not necessary in the component, it may be declared on a parent element (e.g, on a psk-container) if one controller would be used for handling multiple forms. The model for the form(s) will be defined in the same controller.</p>
-        <p>At the bottom of the page stands a minimal example of using the component with its attributes. More examples can be found within <psk-link tag="using-psk-form">Using forms</psk-link> page.</p>
+        <p>At the bottom of the page stands a minimal example of using the component with its attributes.
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
