--- a/pages/cardinal/components/psk-input.html
+++ b/pages/cardinal/components/psk-input.html
@@ -18,16 +18,16 @@
 
     <psk-description title="Summary">
         <p>This component is extended from the basic HTML input element and it's used inside a
-            <psk-link tag="psk-form">psk-form</psk-link> component.</p>
+            <webc-link tag="psk-form">psk-form</webc-link> component.</p>
         <p>A psk-input component can vary in many ways, depending on the type attribute.</p>
         <p>Besides the normal behaviour of the HTML input element, the psk-input component can accept a label which will be displayed in grouped way, so the user needs only to introduce the component with the right attributes configured.</p>
         <p>Using this component, a series of other components are derived in order to create a more specific behaviour for some of the input types:</p>
         <psk-list>
-            <psk-link tag="psk-text-input">psk-text-input</psk-link>
-            <psk-link tag="psk-email-input">psk-email-input</psk-link>
-            <psk-link tag="psk-password-input">psk-password-input</psk-link>
-            <psk-link tag="psk-date-input">psk-date-input</psk-link>
-            <psk-link tag="psk-number-input">psk-number-input</psk-link>
+            <webc-link tag="psk-text-input">psk-text-input</webc-link>
+            <webc-link tag="psk-email-input">psk-email-input</webc-link>
+            <webc-link tag="psk-password-input">psk-password-input</webc-link>
+            <webc-link tag="psk-date-input">psk-date-input</webc-link>
+            <webc-link tag="psk-number-input">psk-number-input</webc-link>
         </psk-list>
     </psk-description>
 
@@ -111,7 +111,7 @@
                     <psk-input view-model="email"></psk-input>
                 </psk-grid>
                 <p>A very good example of using this component and the other form components can be found here:
-                    <psk-link tag="using-forms">Using forms</psk-link>.
+                    <webc-link tag="cardinal-forms">Using forms</webc-link>.
                 </p>
                 <psk-list-feedbacks messages-to-display="5" time-alive="3000">
                 </psk-list-feedbacks>
