--- a/pages/cardinal/components/psk-label.html
+++ b/pages/cardinal/components/psk-label.html
@@ -17,7 +17,7 @@
     <psk-toc title="Table of contents"></psk-toc>
 
     <psk-description title="Summary">
-        <p>This component is part of the form components and is intended to display a text inside the form, or a label for a form component (check <psk-link tag="using-forms">Using Forms</psk-link> for details).</p>
+        <p>This component is part of the form components and is intended to display a text inside the form, or a label for a form component (check <webc-link tag="cardinal-forms">Using Forms</webc-link> for details).</p>
         <p>The components, by their logic, already have the possibility to display a label for them, but there are always different needs.</p>
         <p>So this component is meant to please your needs to display a label anywhere you want it.</p>
     </psk-description>
