--- a/pages/cardinal/components/psk-mobile.html
+++ b/pages/cardinal/components/psk-mobile.html
@@ -18,7 +18,7 @@
 
     <psk-description title="Summary">
         <p>This component is a wrapper for any page of a mobile application.</p>
-        <p>It must be used like <psk-link tag="psk-page">psk-page</psk-link> but only for mobile devices.</p>
+        <p>It must be used like <webc-link tag="psk-page">psk-page</webc-link> but only for mobile devices.</p>
     </psk-description>
 
     <psk-chapter title="Supported properties">
@@ -71,7 +71,7 @@
         </psk-chapter>
 
         <psk-chapter title="Footer">
-            <p>The developer can provide a footer to a mobile page through this slot. He must use one of these two components <strong>psk-button-link</strong> and <psk-link tag="psk-link">psk-link</psk-link> with the corresponding attributes.</p>
+            <p>The developer can provide a footer to a mobile page through this slot. He must use one of these two components <strong>psk-button-link</strong> and <webc-link tag="psk-link">psk-link</webc-link> with the corresponding attributes.</p>
 
             <psk-example class="mobile-example">
                 <psk-mobile mode="demo" id="demo-footer">
