--- a/pages/cardinal/components/psk-page.html
+++ b/pages/cardinal/components/psk-page.html
@@ -19,8 +19,8 @@
     <psk-description title="Summary">
         <p>This component is the most important component for documentation as it renders the entire page.</p>
         <p>This component renders everything on UI starting with it's <code>title</code> property.</p>
-        <span>For loading it uses <psk-link tag="ui-loader">psk-ui-loader</psk-link> as a mean to mark the loading process.</span>
-        <span><code>Psk-page</code> listens to all the <code>psk-send-chapter</code> events sent by the <psk-link tag="psk-chapter">psk-chapter</psk-link>.</span>
+        <span>For loading it uses <webc-link tag="ui-loader">psk-ui-loader</webc-link> as a mean to mark the loading process.</span>
+        <span><code>Psk-page</code> listens to all the <code>psk-send-chapter</code> events sent by the <webc-link tag="psk-chapter">psk-chapter</webc-link>.</span>
         <p>For every event sent there are two possible situations that affects the hierarchy of chapters:</p>
         <ul>
             <li>The hierarchy is not instantiated and therefore it will be created.</li>
