--- a/pages/cardinal/components/psk-radio-group.html
+++ b/pages/cardinal/components/psk-radio-group.html
@@ -17,7 +17,7 @@
     <psk-toc title="Table of contents"></psk-toc>
 
     <psk-description title="Summary">
-        <p>Psk-radio-group is the component that groups the <psk-link tag="psk-radio">Psk-Radio</psk-link> components. The main responsability is to ensure that only one radio option is checked.</p>
+        <p>Psk-radio-group is the component that groups the <webc-link tag="psk-radio">Psk-Radio</webc-link> components. The main responsability is to ensure that only one radio option is checked.</p>
         <p>Psk-radio-group is notified when a psk-radio is clicked, so the group can then update the model.</p>
     </psk-description>
 
@@ -101,7 +101,7 @@
             </psk-example>
             <psk-chapter title="Form Usage">
                 <p>An explanatory example using a full form can be found at:
-                    <psk-link tag="using-forms">Using forms</psk-link> page.</p>
+                    <webc-link tag="cardinal-forms">Using forms</webc-link> page.</p>
             </psk-chapter>
         </psk-chapter>
     </psk-chapter>
