--- a/pages/cardinal/components/psk-radio.html
+++ b/pages/cardinal/components/psk-radio.html
@@ -19,8 +19,8 @@
     <psk-description title="Summary">
         <p>Psk-Radio component is designed to be used inside a <b>psk-radio-group</b> component because in the essence, only one radio can be selected inside a group.</p>
         <p>If you want to be able to select multiple options from a list, you can use
-            <psk-link tag="psk-checkbox">Psk-Checkboxes</psk-link> or
-            <psk-link tag="psk-select">Psk-Select</psk-link>
+            <webc-link tag="psk-checkbox">Psk-Checkboxes</webc-link> or
+            <webc-link tag="psk-select">Psk-Select</webc-link>
         </p>
         <p>Radios are typically rendered as small circles, which are filled or highlighted when selected.</p>
         <p>Psk-radio-group is notified when a psk-radio is clicked, so the group can then update the model.</p>
@@ -109,7 +109,7 @@
         </psk-chapter>
         <psk-chapter title="Form Usage">
             <p>An explanatory example using a full form can be found at:
-                <psk-link tag="using-forms">Using forms</psk-link> page.</p>
+                <webc-link tag="cardinal-forms">Using forms</webc-link> page.</p>
         </psk-chapter>
     </psk-chapter>
 
