--- a/pages/cardinal/components/psk-textarea.html
+++ b/pages/cardinal/components/psk-textarea.html
@@ -109,7 +109,7 @@
                 </psk-list-feedbacks>
             </psk-form>
             <p>A very good example of using this component and the other form components can be found here:
-                <psk-link tag="using-forms">Using forms</psk-link>.
+                <webc-link tag="cardinal-forms">Using forms</webc-link>.
             </p>
         </psk-example>
     </psk-chapter>
