--- a/pages/cardinal/components/psk-toc.html
+++ b/pages/cardinal/components/psk-toc.html
@@ -17,8 +17,8 @@
     <psk-toc title="Table of contents"></psk-toc>
 
     <psk-description title="Summary">
-        <span>This component creates a Table of Content in which every item is a link to that item's position in our <psk-link tag="psk-page">psk-page</psk-link>.</span>
-        <span>It renders a psk-card with the given <code>title</code> in which every <code>psk-page</code> and <psk-link tag="psk-chapter">psk-chapter</psk-link> is rendered.</span>
+        <span>This component creates a Table of Content in which every item is a link to that item's position in our <webc-link tag="psk-page">psk-page</webc-link>.</span>
+        <span>It renders a psk-card with the given <code>title</code> in which every <code>psk-page</code> and <webc-link tag="psk-chapter">psk-chapter</webc-link> is rendered.</span>
         <p>This components selects all <code>psk-chapter</code> components and creates a ordered list based on each chapter existing in the page.</p>
         <p>It renders a unordered list with it's HTML children.</p>
     </psk-description>
