--- a/pages/cardinal/components/psk-toolbar.html
+++ b/pages/cardinal/components/psk-toolbar.html
@@ -18,7 +18,7 @@
 
     <psk-description title="Summary">
         <p>This component creates a toolbar using the given properties and the HTML children.</p>
-        <span>If the property <code>icons</code> is passed ,then a pool of <psk-link tag="/psk-icon">psk-icon</psk-link>, else a pool of <code>button</code> will be instantiated.</span>
+        <span>If the property <code>icons</code> is passed ,then a pool of <webc-link tag="psk-icon">psk-icon</webc-link>, else a pool of <code>button</code> will be instantiated.</span>
         <p>Each time a pool item is clicked a new event is created with the <code>eventData</code> property passed along.</p>
     </psk-description>
 
