--- a/pages/webcardinal/components/webc-if.html
+++ b/pages/webcardinal/components/webc-if.html
@@ -243,7 +243,7 @@
                 predefined expression. Click <a href="/?Cardinal/models&chapter=expressions">here</a> to learn more
                 about model expressions. Regardless of the type of condition used, the attribute value must start with
                 the <code>@</code> character, as explained in the
-                <psk-link tag="Models">Cardinal Model</psk-link> chapter.
+                <webc-link tag="Models">Cardinal Model</webc-link> chapter.
             </p>
         </psk-highlight>
     </psk-chapter>
