--- a/pages/cardinal/components/psk-card.html
+++ b/pages/cardinal/components/psk-card.html
@@ -20,7 +20,7 @@
         <p>The key function of this web component is to make the data more friendly both for the user and the developer.</p>
         <p>It is easy to use as it gets two parameters: <code>Id</code> and <code>Title</code>.</p>
         <p>If both parameters are given to the component next to the title another component will be rendered,
-            <psk-link tag="psk-copy-clipboard">psk-copy-clipboard</psk-link>
+            <webc-link tag="psk-copy-clipboard">psk-copy-clipboard</webc-link>
         </p>
     </psk-description>
 
@@ -30,7 +30,7 @@
 
     <psk-chapter title="HTML Children">
         <span>This component renders two slots, one with the toolbar name which renders a:
-            <psk-link tag="psk-toolbar">psk-toolbar</psk-link> component.
+            <webc-link tag="psk-toolbar">psk-toolbar</webc-link> component.
         </span>
         <p>The other one renders the info given between the tags in the newly created.</p>
     </psk-chapter>
