--- a/pages/cardinal/components/psk-checkbox.html
+++ b/pages/cardinal/components/psk-checkbox.html
@@ -139,7 +139,7 @@
 
             <psk-chapter title="Form Usage">
                 <p>An explanatory example using a full form can be found at:
-                    <psk-link tag="using-forms">Using forms</psk-link> page.</p>
+                    <webc-link tag="cardinal-forms">Using forms</webc-link> page.</p>
             </psk-chapter>
         </psk-example>
     </psk-chapter>
