--- a/pages/cardinal/components/psk-date-input.html
+++ b/pages/cardinal/components/psk-date-input.html
@@ -18,17 +18,17 @@
 
     <psk-description title="Summary">
         <p>This component is extended from the
-            <psk-link tag="psk-input">psk-input</psk-link> component, it is used inside a
-            <psk-link tag="psk-form">psk-form</psk-link> component and is intending to be used as input for
+            <webc-link tag="psk-input">psk-input</webc-link> component, it is used inside a
+            <webc-link tag="psk-form">psk-form</webc-link> component and is intending to be used as input for
             dates or timestamps, as the component will be able to display a calendar in order to select a date, but also can be
             written by the user in the displayed format.</p>
         <p>The other components derived from
-            <psk-link tag="psk-input">psk-input</psk-link> are:</p>
+            <webc-link tag="psk-input">psk-input</webc-link> are:</p>
         <psk-list>
-            <psk-link tag="psk-password-input">psk-password-input</psk-link>
-            <psk-link tag="psk-text-input">psk-text-input</psk-link>
-            <psk-link tag="psk-number-input">psk-number-input</psk-link>
-            <psk-link tag="psk-number-input">psk-email-input</psk-link>
+            <webc-link tag="psk-password-input">psk-password-input</webc-link>
+            <webc-link tag="psk-text-input">psk-text-input</webc-link>
+            <webc-link tag="psk-number-input">psk-number-input</webc-link>
+            <webc-link tag="psk-number-input">psk-email-input</webc-link>
         </psk-list>
     </psk-description>
 
@@ -122,7 +122,7 @@
             </psk-form>
         </psk-code>
         <p>A very good example of using this component and the other form components can be found here:
-            <psk-link tag="using-forms">Using forms</psk-link>.
+            <webc-link tag="cardinal-forms">Using forms</webc-link>.
         </p>
     </psk-chapter>
 
