--- a/pages/cardinal/components/psk-link.html
+++ b/pages/cardinal/components/psk-link.html
@@ -26,12 +26,12 @@
     </psk-property-descriptor>
 
     <psk-controller-descriptor title="Events that supports Controller">
-        <psk-link data-define-controller="true">
-        </psk-link>
+        <webc-link data-define-controller="true">
+        </webc-link>
     </psk-controller-descriptor>
 
     <psk-highlight title="Note" type-of-highlight="note">
-        The use of <code>tag</code> attributes is encouraged because the <strong>psk-link</strong> will support menu page changes in <psk-link tag="documentation-site" chapter="create-a-new-page">menu.json</psk-link> in this way.
+        The use of <code>tag</code> attributes is encouraged because the <strong>webc-link</strong> will support menu page changes in <code>menu.json</code> in this way.
         If you opt out for <code>page</code> attribute, you will have to manage by yourself the url changes.
     </psk-highlight>
 
@@ -42,15 +42,15 @@
     <psk-chapter title="Code example using page attribute">
 
         <psk-code language="markup">
-            <psk-link page="psk-wiki/psk-card">
+            <webc-link tag="psk-card">
                 Click me to get redirected!
-            </psk-link>
+            </webc-link>
         </psk-code>
 
             <psk-example class="app-example"  title="Example with page">
-                <psk-link page="cardinal/psk-wiki/psk-card">
+                <webc-link tag="psk-card">
                     Click me to get redirected!
-                </psk-link>
+                </webc-link>
             </psk-example>
 
     </psk-chapter>
@@ -58,16 +58,16 @@
     <psk-chapter title="Code example using tag attribute">
 
         <psk-code language="markup">
-            <psk-link tag="psk-card">
+            <webc-link tag="psk-card">
                 Click me to get redirected!
-            </psk-link>
+            </webc-link>
         </psk-code>
 
 
             <psk-example class="app-example"  title="Example with tag">
-                <psk-link tag="psk-card">
+                <webc-link tag="psk-card">
                     Click me to get redirected!
-                </psk-link>
+                </webc-link>
             </psk-example>
 
     </psk-chapter>
@@ -75,15 +75,15 @@
     <psk-chapter title="Code example using page and chapter attributes">
 
         <psk-code language="markup">
-            <psk-link page="psk-wiki/psk-card" chapter="code-example">
+            <webc-link tag="psk-card" chapter="code-example">
                 Click me to get redirected!
-            </psk-link>
+            </webc-link>
         </psk-code>
 
         <psk-example class="app-example"  title="Example with page and chapter">
-            <psk-link page="cardinal/psk-wiki/psk-card" chapter="code-example">
+            <webc-link tag="psk-card" chapter="code-example">
                 Click me to get redirected!
-            </psk-link>
+            </webc-link>
         </psk-example>
 
     </psk-chapter>
@@ -91,16 +91,16 @@
     <psk-chapter title="Code example using tag and chapter attributes">
 
         <psk-code language="markup">
-            <psk-link tag="psk-card" chapter="code-example">
+            <webc-link tag="psk-card" chapter="code-example">
                 Click me to get redirected!
-            </psk-link>
+            </webc-link>
         </psk-code>
 
 
         <psk-example class="app-example"  title="Example with tag and chapter">
-            <psk-link tag="psk-card" chapter="code-example">
+            <webc-link tag="psk-card" chapter="code-example">
                 Click me to get redirected!
-            </psk-link>
+            </webc-link>
         </psk-example>
 
     </psk-chapter>
