--- a/pages/cardinal/components/psk-password-input.html
+++ b/pages/cardinal/components/psk-password-input.html
@@ -18,15 +18,15 @@
 
     <psk-description title="Definition">
         <p>This component is extended from the
-            <psk-link tag="psk-input">psk-input</psk-link> component, it is used inside a
-            <psk-link tag="psk-form">psk-form</psk-link> component and is intending to be used as input for passwords.</p>
+            <webc-link tag="psk-input">psk-input</webc-link> component, it is used inside a
+            <webc-link tag="psk-form">psk-form</webc-link> component and is intending to be used as input for passwords.</p>
         <p>The other components derived from
-            <psk-link tag="psk-input">psk-input</psk-link> are:</p>
+            <webc-link tag="psk-input">psk-input</webc-link> are:</p>
         <psk-list>
-            <psk-link tag="psk-text-input">psk-text-input</psk-link>
-            <psk-link tag="psk-email-input">psk-email-input</psk-link>
-            <psk-link tag="psk-date-input">psk-date-input</psk-link>
-            <psk-link tag="psk-number-input">psk-number-input</psk-link>
+            <webc-link tag="psk-text-input">psk-text-input</webc-link>
+            <webc-link tag="psk-email-input">psk-email-input</webc-link>
+            <webc-link tag="psk-date-input">psk-date-input</webc-link>
+            <webc-link tag="psk-number-input">psk-number-input</webc-link>
         </psk-list>
     </psk-description>
 
@@ -96,7 +96,7 @@
                 </psk-list-feedbacks>
             </psk-form>
             <p>A very good example of using this component and the other form components can be found here:
-                <psk-link tag="using-forms">Using forms</psk-link>.
+                <webc-link tag="cardinal-forms">Using forms</webc-link>.
             </p>
         </psk-example>
     </psk-chapter>
