--- a/pages/cardinal/components/psk-select.html
+++ b/pages/cardinal/components/psk-select.html
@@ -127,6 +127,6 @@
         </psk-example>
     </psk-chapter>
 
-    <p>An explanatory example using a full form can be found at: <psk-link tag="using-forms">Using forms</psk-link> page.</p>
+    <p>An explanatory example using a full form can be found at: <webc-link tag="cardinal-forms">Using forms</webc-link> page.</p>
 
 </psk-page>
