--- a/pages/cardinal/components/psk-ssapp.html
+++ b/pages/cardinal/components/psk-ssapp.html
@@ -17,10 +17,10 @@
     <psk-toc title="Table of Contents"></psk-toc>
 
     <psk-description title="Summary">
-        <p>This component handles the loading and running of a SSApp , more information on how to create a SSApp you have on the <psk-link tag="a-ssapp">How to create a SSApp</psk-link> page.</p>
+        <p>This component handles the loading and running of a SSApp , more information on how to create a SSApp you have on the <webc-link href="/how-to/a-ssapp">How to create a SSApp</webc-link> page.</p>
         <p>It loads the SSApp inside an iframe using the properties given.</p>
         <p>In PrivateSky a SSApp is the equivalent of the Decentralised Applications (DApps).</p>
-        <p>In order to better understand what is a SSApp and it's role in PrivateSky you have all the info you need <psk-link tag="ss-app-overview">here</psk-link>.</p>
+        <p>In order to better understand what is a SSApp and it's role in PrivateSky you have all the info you need <webc-link href="/api/ssapps/overview">here</webc-link>.</p>
     </psk-description>
 
     <!-- BEGIN -->
