--- a/pages/cardinal/components/psk-text-input.html
+++ b/pages/cardinal/components/psk-text-input.html
@@ -18,15 +18,15 @@
 
     <psk-description title="Summary">
         <p>This component is extended from the
-            <psk-link tag="psk-input">psk-input</psk-link> component, it is used inside a
-            <psk-link tag="psk-form">psk-form</psk-link> component and is intending to be used as input for simple texts, like name, address and so on.</p>
+            <webc-link tag="psk-input">psk-input</webc-link> component, it is used inside a
+            <webc-link tag="psk-form">psk-form</webc-link> component and is intending to be used as input for simple texts, like name, address and so on.</p>
         <p>The other components derived from
-            <psk-link tag="psk-input">psk-input</psk-link> are:</p>
+            <webc-link tag="psk-input">psk-input</webc-link> are:</p>
         <psk-list>
-            <psk-link tag="psk-password-input">psk-password-input</psk-link>
-            <psk-link tag="psk-email-input">psk-email-input</psk-link>
-            <psk-link tag="psk-date-input">psk-date-input</psk-link>
-            <psk-link tag="psk-number-input">psk-number-input</psk-link>
+            <webc-link tag="psk-password-input">psk-password-input</webc-link>
+            <webc-link tag="psk-email-input">psk-email-input</webc-link>
+            <webc-link tag="psk-date-input">psk-date-input</webc-link>
+            <webc-link tag="psk-number-input">psk-number-input</webc-link>
         </psk-list>
     </psk-description>
 
@@ -95,7 +95,7 @@
     </psk-chapter>
 
     <p>A very good example of using this component and the other form components can be found here:
-        <psk-link tag="using-forms">Using forms</psk-link>.
+        <webc-link tag="cardinal-forms">Using forms</webc-link>.
     </p>
 
 </psk-page>
