Different fixes or improvements

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
 @import url("./fonts/nunito/nunito.css");
 @import url("./fonts/fontawesome/font-awesome.min.css");
-@import url("./bootstrap/css/bootstrap.min.css");
+/*@import url("./bootstrap/css/bootstrap.min.css");*/
 
 @import url("./variables.css");
 @import url("./patches.css");
